Openshift/samples/Prometheus.yml
---

kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: prometheus
  name: prometheus
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: prometheus
  strategy:
    activeDeadlineSeconds: 21600
    recreateParams:
      timeoutSeconds: 600
    resources: {}
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - args:
            - --web.console.templates=/etc/prometheus/consoles
            - --web.console.libraries=/etc/prometheus/console_libraries
            - --config.file=/etc/prometheus/prometheus.yml
            - --storage.tsdb.path=/prometheus
            - --storage.tsdb.retention=2h
            - --web.enable-lifecycle
            - --storage.tsdb.wal-compression
          image: registry.ca.sbrf.ru/base/redhat/openshift4/ose-prometheus:v4.3.0-202001211731
          imagePullPolicy: Always
          name: prometheus
          ports:
            - containerPort: 9090
              protocol: TCP
          resources:
            limits:
              cpu: 400m
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 100Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /prometheus
              name: prometheus-1
            - mountPath: /etc/prometheus
              name: volume-k5dem
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: prometheus
      terminationGracePeriodSeconds: 30
      volumes:
        - emptyDir: {}
          name: prometheus-1
        - configMap:
            defaultMode: 420
            name: prometheus-config
          name: volume-k5dem
  test: false
  triggers:
    - type: ConfigChange

---

kind: Service
apiVersion: v1
metadata:
  labels:
    app: prometheus
  name: prometheus
spec:
  ports:
    - port: 9090
      protocol: TCP
      targetPort: 9090
  selector:
    app: prometheus
  sessionAffinity: None
  type: ClusterIP

---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: prometheus
  name: prometheus
spec:
  port:
    targetPort: 9090
  to:
    kind: Service
    name: prometheus
    weight: 100
  wildcardPolicy: None
