Openshift/samples/Route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: umb
spec:
  host: umb.apps.test.ru
  port:
    targetPort: port8081
  to:
    kind: Service
    name: umb
    weight: 100
  wildcardPolicy: None
